2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* init.el (+import-env-var-for-display): Fix importing display name.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (kimi-assistant): Use kimi-k2-turbo-preview.

2025-08-13  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs): Define a theme.  Put my face customizations
	in a theme `dotemacs'.  Otherwise, the customizations will be
	written to `custom-file'.

2025-08-13  Zhengyi Fu  <i@fuzy.me>

	Implement elisp flymake backend for straight

	* init.el (straight-flymake-byte-compile): New function.  Advice
	`elisp-flymake-byte-compile' to load packages installed with
	`straight'.
	(straight--add-package-to-load-path): Remove advice.

2025-08-13  Zhengyi Fu  <i@fuzy.me>

	Auto-quit reviewing the repo only when the local branch equals the
	upstream branch

	* init.el (+straight-repo-up-to-date-p): Add optional arg to check
	if the local branch is strictly equal to the upstream branch.
	(+straight-review-updated-repos): Use it in `magit-pre-refresh-hook'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (native-comp-async-on-battery-power):
	Set to nil.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-review-updated-repos): Switch to next repo
	when the current repo is up-to-date.
	(+straight-repo-up-to-date-p): New function.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Do not clear `site-run-file'.  It does not work
	since Emacs 31.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (LaTeX-mode-hook, latex-mode-hook): Add
	`turn-on-reftex'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (emacs-startup-hook): Add
	`standard-display-unicode-special-glyphs'.

2025-08-12  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-shellcheck-fix):
	Do not include all "web" tools.

2025-08-11  Zhengyi Fu  <i@fuzy.me>

	TeX configuration

	* init.el (TeX-auto-save, TeX-parse-self): Set to t;
	(TeX-master): Set default value to t.

2025-08-11  Zhengyi Fu  <i@fuzy.me>
